--- a/index.html
+++ b/index.html
@@ -25,336 +25,27 @@
     gtag('config', 'UA-108381604-1');
   </script>
 </head>
-
-    <div class="container-fluid h-100" style="padding: 0;overflow: hidden;">
-      <div class="row h-100 justify-content-center sidebar" style="float:right;z-index:105;height:96% !important"> 
-        <div class="align-self-center" style="z-index: 1000; width:30px;">
-          <p class="social" style="margin-bottom: 60px">><a href="https://twitter.com/royblair_">TWITTER</a></p>
-          <p class="social" style="margin-bottom: 70px"><a href="https://www.instagram.com/royblair_/">INSTAGRAM</a></p>
-          <p class="social" style="margin-bottom: 58px;"><a href="https://www.youtube.com/channel/UCa7naaG4ADIbHlz6QOz3MDA">YOUTUBE</a></p>
-          <p class="social" style="margin-bottom: 83px"><a href="https://soundcloud.com/royblair">SOUNDCLOUD</a></p>
-          <p class="social" style="margin-bottom: 0px"><a href="mailto:royblairmgmt@gmail.com">CONTACT</a></p>
-        </div>
-      </div>
-
-      <div class="row h-100 justify-content-center catico" style="margin: 0;z-index:100;"> 
-        <div class="align-self-center" style="z-index:100;">    
-          <img id="cath" src="img/catheaven.png" style="z-index:100;"/></a>
-        </div>
-      </div>
-
-      <div style="position: absolute;bottom: 0;right: 0;z-index:108;">
-        <a href="http://open.spotify.com/album/0Z9NeEvqeecaLCFUmI4uDw"><img class="icon-link" src="img/spotify-white.png"></a>
-        <a href="https://itunes.apple.com/us/album/cat-heaven/1316794586?uo=4&at=1001l3Iq&ct=888915493540"><img class="icon-link" src="img/apple-white.png"></a>
-        <a href="https://play.google.com/store/music/album/Roy_Blair_Cat_Heaven?id=B4clujticxginkvlyk5eosnuuly"><img class="icon-link last-link" src="img/google-white.png"></a>
-      </div>
-
-      <div class="wrapper" style="z-index:100;">
-
-        <div class="row">
-         <p class='songtitle' style="padding-top:0px;">"GROW UP"</p>
-       </div>
-       <div class="row">
-        <p class='artist'>(R. Blair)</p>
-      </div>
-      <div class="row">
-        <div class="col-6 jobs">
-          <div class='job'><p>Produced By</p></div>
-          <div class='job'><p>Guitar By</p></div>
-          <div class='job'><p>Additional Production By</p></div>
-          <div class='job extra-pad'><p>Additional Vocals By</p></div>
-          <div class='job'><p>Mixed By</p></div>
-        </div>
-        <div class="col-6 people">
-          <div class='name'><p>roy blair</p></div>
-          <div class='name'><p>Jack Loken</p></div>
-          <div class='name'><p style="margin-bottom: 3px;">Natalie Green</p><p>Instupendo</p></div>
-          <div class='name'><p>Lucy Loken</p></div>
-          <div class='name'><p style="margin-bottom: 3px;">Alexander Spit</p><p>Roy Blair</p></div>
-        </div>
-      </div>
-      <div class="row">
-       <p class='songtitle'>"ALEX"</p>
-     </div>
-     <div class="row">
-      <p class='artist'>(R. Blair)</p>
-    </div>
-    <div class="row">
-      <div class="col-6 jobs">
-        <div class='job'><p>Produced By</p></div>
-        <div class='job'><p>Guitar By</p></div>
-        <div class='job'><p>Additional Production By</p></div>
-        <div class='job extra-pad'><p>Mixed By</p></div>
-      </div>
-      <div class="col-6 people">
-        <div class='name'><p>Romil Hemnani</p></div>
-        <div class='name'><p>Jack Loken</p></div>
-        <div class='name'><p style="margin-bottom: 3px;">Roy Blair</p><p>Natalie Green</p></div>
-        <div class='name'><p style="margin-bottom: 3px;">Alexander Spit</p><p>Roy Blair</p></div>
-      </div>
-    </div>
-    <div class="row">
-     <p class='songtitle'>"FAMILY"</p>
-   </div>
-   <div class="row">
-    <p class='artist'>(R. Blair)</p>
-  </div>
-  <div class="row">
-    <div class="col-6 jobs">
-      <div class='job'><p>Produced By</p></div>
-      <div class='job'><p>Additional Guitar By</p></div>
-      <div class='job'><p>Additional Production By</p></div>
-      <div class='job extra-pad'><p>Additional Vocals By</p></div>
-      <div class='job'><p>Mixed By</p></div>
-    </div>
-    <div class="col-6 people">
-      <div class='name'><p>Finn Orrell</p></div>
-      <div class='name'><p>Jack Loken</p></div>
-      <div class='name'><p style="margin-bottom: 3px;">Natalie Green</p><p>Roy Blair</p></div>
-      <div class='name'><p>Lontalius</p></div>
-      <div class='name'><p style="margin-bottom: 3px;">Alexander Spit</p><p>Roy Blair</p></div>
-    </div>
-  </div>
-  <div class="row">
-   <p class='songtitle'>"HAPPY"</p>
- </div>
- <div class="row">
-  <p class='artist'>(R. Blair)</p>
-</div>
-<div class="row">
-  <div class="col-6 jobs">
-    <div class='job'><p>Produced By</p></div>
-    <div class='job'><p>Drum Programming By</p></div>
-    <div class='job'><p>Guitar By</p></div>
-    <div class='job'><p>Additional Production By</p></div>
-    <div class='job extra-pad'><p>Mixed By</p></div>
-  </div>
-  <div class="col-6 people">
-    <div class='name'><p>Zach Fogarty</p></div>
-    <div class='name'><p>Roy Blair</p></div>
-    <div class='name'><p>Finn Orrell</p></div>
-    <div class='name'><p style="margin-bottom: 3px;">Jack Loken</p><p>Natalie Green</p></div>
-    <div class='name'><p>Zach Fogarty</p></div>
-  </div>
-</div>
-
-<div class="row">
- <p class='songtitle'>"PERFUME"</p>
-</div>
-<div class="row">
-  <p class='artist'>(R. Blair)</p>
-</div>
-<div class="row">
-  <div class="col-6 jobs">
-    <div class='job'><p>Produced By</p></div>
-    <div class='job'><p>Additional Guitar By</p></div>
-    <div class='job'><p>Mixed By</p></div>
-  </div>
-  <div class="col-6 people">
-    <div class='name'><p>LONTALIUS</p></div>
-    <div class='name'><p>JACK LOKEN</p></div>
-    <div class='name'><p style="margin-bottom: 3px;">ALEXANDER SPIT</p><p>ROY BLAIR</p></div>
-  </div>
-</div>
-
-<div class="row">
- <p class='songtitle'>"THUNDER"</p>
-</div>
-<div class="row">
-  <p class='artist'>(R. Blair)</p>
-</div>
-<div class="row">
-  <div class="col-6 jobs">
-    <div class='job'><p>Produced By</p></div>
-    <div class='job'><p>Additional Production By</p></div>
-    <div class='job extra-pad'><p>Guitar By</p></div>
-    <div class='job extra-pad'><p>Additional Vocals</p></div>
-    <div class='job'><p>Mixed By</p></div>
-  </div>
-  <div class="col-6 people">
-    <div class='name'><p>Roy Blair</p></div>
-    <div class='name'><p style="margin-bottom: 3px;">bearface</p><p>JOBA</p></div>
-    <div class='name'><p style="margin-bottom: 3px;">Jack Loken</p><p>Roy Blair</p></div>
-    <div class='name'><p>Hana Tyszka</p></div>
-    <div class='name'><p style="margin-bottom: 3px;">Natalie Green</p><p>Roy Blair</p></div>
-  </div>
-</div>
-
-<div class="row">
- <p class='songtitle'>"JANE"</p>
-</div>
-<div class="row">
-  <p class='artist'>(R. Blair)</p>
-</div>
-<div class="row">
-  <div class="col-6 jobs">
-    <div class='job'><p>Produced By</p></div>
-    <div class='job'><p>Mixed By</p></div>
-  </div>
-  <div class="col-6 people">
-    <div class='name'><p>ZACH FOGARTY</p></div>
-    <div class='name'><p style="margin-bottom: 3px;">ALEXANDER SPIT</p><p>ROY BLAIR</p></div>
-  </div>
-</div>
-
-<div class="row">
- <p class='songtitle'>"KANSAS"</p>
-</div>
-<div class="row">
-  <p class='artist'>(R. Blair)</p>
-</div>
-<div class="row">
-  <div class="col-6 jobs">
-    <div class='job'><p>Produced By</p></div>
-    <div class='job'><p>Guitar By</p></div>
-    <div class='job'><p>Mixed By</p></div>
-  </div>
-  <div class="col-6 people">
-    <div class='name'><p>Roy Blair</p></div>
-    <div class='name'><p>Jack Loken</p></div>
-    <div class='name'><p style="margin-bottom: 3px;">Alexander Spit</p><p>Roy Blair</p></div>
-  </div>
-</div>
-
-<div class="row">
- <p class='songtitle'>"SEPTEMBER"</p>
-</div>
-<div class="row">
-  <p class='artist'>(R. Blair, J. Larsen)</p>
-</div>
-<div class="row">
-  <div class="col-6 jobs">
-    <div class='job'><p>Produced By</p></div>
-    <div class='job'><p>Additional Vocals</p></div>
-    <div class='job'><p>Mixed By</p></div>
-  </div>
-  <div class="col-6 people">
-    <div class='name'><p>Lontalius</p></div>
-    <div class='name'><p>Jack Larsen</p></div>
-    <div class='name'><p style="margin-bottom: 3px;">Alexander Spit</p><p>Roy Blair</p></div>
-  </div>
-</div>
-
-<div class="row">
- <p class='songtitle'>"SWITCHBLADE"</p>
-</div>
-<div class="row">
-  <p class='artist'>(R. Blair)</p>
-</div>
-<div class="row">
-  <div class="col-6 jobs">
-    <div class='job'><p>Produced By</p></div>
-    <div class='job'><p>Guitar By</p></div>
-    <div class='job'><p>Additional Guitar by</p></div>
-    <div class='job'><p>Mixed By</p></div>
-  </div>
-  <div class="col-6 people">
-    <div class='name'><p>Roy Blair</p></div>
-    <div class='name'><p>Jack Loken</p></div>
-    <div class='name'><p>Roy Blair</p></div>
-    <div class='name'><p style="margin-bottom: 3px;">Alexander Spit</p><p>Roy Blair</p></div>
-  </div>
-</div>
-
-<div class="row">
- <p class='songtitle'>"GRAND THEFT AUTO"</p>
-</div>
-<div class="row">
-  <p class='artist'>(R. Blair)</p>
-</div>
-<div class="row">
-  <div class="col-6 jobs">
-    <div class='job'><p>Produced By</p></div>
-    <div class='job'><p>Guitar By</p></div>
-    <div class='job extra-pad'><p>Additional Guitar by</p></div>
-    <div class='job'><p>Additional Production by</p></div>
-    <div class='job'><p>Additional vocals by</p></div>
-    <div class='job'><p>Mixed By</p></div>
-  </div>
-  <div class="col-6 people">
-    <div class='name'><p>Roy Blair</p></div>
-    <div class='name'><p style="margin-bottom: 3px;">finn orrell</p><p>roy blair</p></div>
-    <div class='name'><p>Lontalius</p></div>
-    <div class='name'><p>Instupendo</p></div>
-    <div class='name'><p>Lucy Loken</p></div>
-    <div class='name'><p style="margin-bottom: 3px;">Alexander Spit</p><p>Roy Blair</p></div>
-  </div>
-</div>
-
-<div class="row">
- <p class='songtitle'>"CALIFORNIA"</p>
-</div>
-<div class="row">
-  <p class='artist'>(R. Blair)</p>
-</div>
-<div class="row">
-  <div class="col-6 jobs">
-    <div class='job'><p>Produced By</p></div>
-    <div class='job extra-pad'><p>Guitar By</p></div>
-    <div class='job extra-pad'><p>Additional Production by</p></div>
-    <div class='job'><p>Mixed By</p></div>
-  </div>
-  <div class="col-6 people">
-    <div class='name'><p style="margin-bottom: 3px;">Natalie Green</p><p>Kevin James Neal</p></div>
-    <div class='name'><p style="margin-bottom: 3px;">finn orrell</p><p>natalie green</p></div>
-    <div class='name'><p>roy blair</p></div>
-    <div class='name'><p style="margin-bottom: 3px;">zach fogarty</p><p>Roy Blair</p></div>
-  </div>
-</div>
-
-<div class="row">
- <p class='songtitle'>"HAZEL"</p>
-</div>
-<div class="row">
-  <p class='artist'>(R. Blair)</p>
-</div>
-<div class="row">
-  <div class="col-6 jobs">
-    <div class='job'><p>Produced By</p></div>
-    <div class='job extra-pad'><p>Additional Guitar By</p></div>
-    <div class='job'><p>Additional Vocals by</p></div>
-    <div class='job'><p>Mixed By</p></div>
-  </div>
-  <div class="col-6 people">
-    <div class='name'><p style="margin-bottom: 3px;">Jack Loken</p><p>Roy Blair</p></div>
-    <div class='name'><p>finn orrell</p></div>
-    <div class='name'><p>Lucy Loken</p></div>
-    <div class='name'><p style="margin-bottom: 3px;">Alexander Spit</p><p>Roy Blair</p></div>
-  </div>
-</div>
-
-<div class="row">
-  <div class="col-12">
-    <div class='name'><p style="padding-top: 110px; padding-bottom: 40px;text-align: center">executively produced by roy blair</p></div>
-  </div>
-</div>
-<div class="row">
-  <div class="col-12">
-   <div class='name'><p style="padding-bottom: 40px;text-align: center">mastered by kenny gourmet at blue light studio, Vancouver CA</p></div>
- </div>
-</div>
-<div class="row">
-  <div class="col-12">
-   <div class='name'><p style="padding-bottom: 100px;text-align: center">distributed by empire distribution © 2017 all rights reserved</p></div>
- </div>
-</div>
-<div class="row">
-  <img style="margin: 0 auto;width: 110px;height: 100px;" src="img/catheaven-logo.png" />
-</div>
-
-</div>
-
-</div>
-
-    <div class="fullscreen-bg">
-  <video muted autoplay playsinline poster="img/placeholder.png" id="vid1" class="fullscreen-bg__video">
-      <source src="img/websiteloop.webm" type=”video/webm”>
-      <source src="img/websiteloop.mp4" type="video/mp4">
-  </video>
-    </div>
-
-<iframe width="1" height="1" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/331582155&amp;color=%23ff5500&amp;auto_play=true&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;show_teaser=true&amp;visual=true"></iframe>
 <body>
+  <div class="menu-i" id="menu-item-roy">
+    <img src="img/rb-black2.png"/>
+  </div>
+  <div class="menu-i" id="menu-item-music">
+    <a class="active" href="index.html">MUSIC</a>
+  </div> 
+  <div class="menu-i" id="menu-item-shows">
+      <a href="shows.html">SHOWS</a>
+  </div>
+  <div class="menu-i" id="menu-item-shop">
+      <a href="shop.html">SHOP</a>
+  </div>
+  <div class="menu-i" id="menu-item-credits">
+      <a href="credits.html">CREDITS</a>
+  </div>
+
+  <div class="container h-100">
+    <div class="row h-100 justify-content-center" style="">
+    </div>
+  </div>
 
   <!--Javascript-->
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
