reduced img size

--- a/shows.html
+++ b/shows.html
@@ -46,9 +46,9 @@
   <div class="container h-100">
     <div class="row h-100 justify-content-center" style="">
       <div class="col-12 align-self-center" id="flyers">
-        <img src="img/flyer1.png"/>
-        <img src="img/flyer2.png"/>
-        <img src="img/flyer3.png"/>
+        <img src="img/flyer1.jpg"/>
+        <img src="img/flyer2.jpg"/>
+        <img src="img/flyer3.jpg"/>
         <img src="img/flyer4.jpg"/>
         <div style="text-align: center;margin-bottom: 180px; margin-top:100px;">
           <a id="tickets-link" href="https://www.ticketfly.com/event/1631870-kailee-morgue-los-angeles/">BUY TICKETS</a>
