--- a/shows.html
+++ b/shows.html
@@ -16,7 +16,7 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/shows.css">
   <link rel="icon" href="img/logo.ico" type="image/x-icon">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
 
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-108381604-1"></script>
   <script>
@@ -43,24 +43,23 @@
       <a href="credits.html">CREDITS</a>
   </div>
 
-  <div class="container h-100">
-    <div class="row h-100 justify-content-center" style="">
-      <div class="col-12 align-self-center" id="flyers">
-        <img src="img/flyer1.jpg"/>
-        <img src="img/flyer2.jpg"/>
-        <img src="img/flyer3.jpg"/>
-        <img src="img/flyer4.jpg"/>
-        <div style="text-align: center;margin-bottom: 180px; margin-top:100px;">
-          <a id="tickets-link" href="https://www.ticketfly.com/event/1631870-kailee-morgue-los-angeles/">BUY TICKETS</a>
-        </div>
-      </div>
-    </div>
-  </div>
 
+<div class="container h-100" style="">
+  <div class="row h-100 justify-content-center" style="">
+      <div class="col-12 align-self-center" style="margin-top:11%;">
+        <div class="row justify-content-center" id="flyers">
+          <img src="img/combine-flyer.jpg">
+          <div style="text-align: center;margin-bottom: 70px; margin-top:70px;">
+            <a id="tickets-link" href="https://www.ticketfly.com/event/1631870-kailee-morgue-los-angeles/">BUY TICKETS</a>
+          </div>
+        </div>
+    </div>   
+  </div>
+</div>
   <!--Javascript-->
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
   <!--<script src="js/jquery.iframetracker.js"></script>-->
   <script src="js/main.js"></script>
 </body>
