shows and credits update

--- a/credits.html
+++ b/credits.html
@@ -14,6 +14,7 @@
   <title>ROY BLAIR</title>
 
   <link rel="stylesheet" href="css/credits.css">
+  <link rel="stylesheet" href="css/style.css">
   <link rel="icon" href="img/logo.ico" type="image/x-icon">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
 
@@ -25,56 +26,51 @@
     gtag('config', 'UA-108381604-1');
   </script>
 </head>
+<body>
 
-    <div class="container-fluid h-100" style="padding: 0;overflow: hidden;">
-      <div class="row h-100 justify-content-center sidebar" style="float:right;z-index:105;height:96% !important"> 
-        <div class="align-self-center" style="z-index: 1000; width:30px;">
-          <p class="social" style="margin-bottom: 60px">><a href="https://twitter.com/royblair_">TWITTER</a></p>
-          <p class="social" style="margin-bottom: 70px"><a href="https://www.instagram.com/royblair_/">INSTAGRAM</a></p>
-          <p class="social" style="margin-bottom: 58px;"><a href="https://www.youtube.com/channel/UCa7naaG4ADIbHlz6QOz3MDA">YOUTUBE</a></p>
-          <p class="social" style="margin-bottom: 83px"><a href="https://soundcloud.com/royblair">SOUNDCLOUD</a></p>
-          <p class="social" style="margin-bottom: 0px"><a href="mailto:royblairmgmt@gmail.com">CONTACT</a></p>
-        </div>
+  <div class="menu-i" id="menu-item-music">
+    <a href="index.html">MUSIC</a>
+  </div> 
+  <div class="menu-i" id="menu-item-shows">
+    <a href="shows.html">SHOWS</a>
+  </div>
+  <div class="menu-i" id="menu-item-shop">
+    <a href="shop.html">SHOP</a>
+  </div>
+  <div class="menu-i" id="menu-item-credits">
+    <a class="active" href="credits.html">CREDITS</a>
+  </div>
+
+  <div class="container-fluid h-100" style="padding: 0;overflow: hidden;">
+    <!--
+    <div class="row h-100 justify-content-center sidebar" style="float:right;z-index:105;height:96% !important"> 
+      <div class="align-self-center" style="z-index: 1000; width:30px;">
+        <p class="social" style="margin-bottom: 60px">><a href="https://twitter.com/royblair_">TWITTER</a></p>
+        <p class="social" style="margin-bottom: 70px"><a href="https://www.instagram.com/royblair_/">INSTAGRAM</a></p>
+        <p class="social" style="margin-bottom: 58px;"><a href="https://www.youtube.com/channel/UCa7naaG4ADIbHlz6QOz3MDA">YOUTUBE</a></p>
+        <p class="social" style="margin-bottom: 83px"><a href="https://soundcloud.com/royblair">SOUNDCLOUD</a></p>
+        <p class="social" style="margin-bottom: 0px"><a href="mailto:royblairmgmt@gmail.com">CONTACT</a></p>
       </div>
-
-      <div class="row h-100 justify-content-center catico" style="margin: 0;z-index:100;"> 
-        <div class="align-self-center" style="z-index:100;">    
-          <img id="cath" src="img/catheaven.png" style="z-index:100;"/></a>
-        </div>
+    </div>
+-->
+    <div class="row h-100 justify-content-center catico" style="margin: 0;z-index:100;"> 
+      <div class="align-self-center" style="z-index:100;">    
+        <img id="cath" src="img/catheaven.png" style="z-index:100;"/></a>
       </div>
+    </div>
 
-      <div style="position: absolute;bottom: 0;right: 0;z-index:108;">
-        <a href="http://open.spotify.com/album/0Z9NeEvqeecaLCFUmI4uDw"><img class="icon-link" src="img/spotify-white.png"></a>
-        <a href="https://itunes.apple.com/us/album/cat-heaven/1316794586?uo=4&at=1001l3Iq&ct=888915493540"><img class="icon-link" src="img/apple-white.png"></a>
-        <a href="https://play.google.com/store/music/album/Roy_Blair_Cat_Heaven?id=B4clujticxginkvlyk5eosnuuly"><img class="icon-link last-link" src="img/google-white.png"></a>
-      </div>
+    <!--
+    <div style="position: absolute;bottom: 0;right: 0;z-index:108;">
+      <a href="http://open.spotify.com/album/0Z9NeEvqeecaLCFUmI4uDw"><img class="icon-link" src="img/spotify-white.png"></a>
+      <a href="https://itunes.apple.com/us/album/cat-heaven/1316794586?uo=4&at=1001l3Iq&ct=888915493540"><img class="icon-link" src="img/apple-white.png"></a>
+      <a href="https://play.google.com/store/music/album/Roy_Blair_Cat_Heaven?id=B4clujticxginkvlyk5eosnuuly"><img class="icon-link last-link" src="img/google-white.png"></a>
+    </div>
+  -->
 
-      <div class="wrapper" style="z-index:100;">
+    <div class="wrapper" style="z-index:100;">
 
-        <div class="row">
-         <p class='songtitle' style="padding-top:0px;">"GROW UP"</p>
-       </div>
-       <div class="row">
-        <p class='artist'>(R. Blair)</p>
-      </div>
       <div class="row">
-        <div class="col-6 jobs">
-          <div class='job'><p>Produced By</p></div>
-          <div class='job'><p>Guitar By</p></div>
-          <div class='job'><p>Additional Production By</p></div>
-          <div class='job extra-pad'><p>Additional Vocals By</p></div>
-          <div class='job'><p>Mixed By</p></div>
-        </div>
-        <div class="col-6 people">
-          <div class='name'><p>roy blair</p></div>
-          <div class='name'><p>Jack Loken</p></div>
-          <div class='name'><p style="margin-bottom: 3px;">Natalie Green</p><p>Instupendo</p></div>
-          <div class='name'><p>Lucy Loken</p></div>
-          <div class='name'><p style="margin-bottom: 3px;">Alexander Spit</p><p>Roy Blair</p></div>
-        </div>
-      </div>
-      <div class="row">
-       <p class='songtitle'>"ALEX"</p>
+       <p class='songtitle' style="padding-top:0px;">"GROW UP"</p>
      </div>
      <div class="row">
       <p class='artist'>(R. Blair)</p>
@@ -84,17 +80,19 @@
         <div class='job'><p>Produced By</p></div>
         <div class='job'><p>Guitar By</p></div>
         <div class='job'><p>Additional Production By</p></div>
-        <div class='job extra-pad'><p>Mixed By</p></div>
+        <div class='job extra-pad'><p>Additional Vocals By</p></div>
+        <div class='job'><p>Mixed By</p></div>
       </div>
       <div class="col-6 people">
-        <div class='name'><p>Romil Hemnani</p></div>
+        <div class='name'><p>roy blair</p></div>
         <div class='name'><p>Jack Loken</p></div>
-        <div class='name'><p style="margin-bottom: 3px;">Roy Blair</p><p>Natalie Green</p></div>
+        <div class='name'><p style="margin-bottom: 3px;">Natalie Green</p><p>Instupendo</p></div>
+        <div class='name'><p>Lucy Loken</p></div>
         <div class='name'><p style="margin-bottom: 3px;">Alexander Spit</p><p>Roy Blair</p></div>
       </div>
     </div>
     <div class="row">
-     <p class='songtitle'>"FAMILY"</p>
+     <p class='songtitle'>"ALEX"</p>
    </div>
    <div class="row">
     <p class='artist'>(R. Blair)</p>
@@ -102,23 +100,43 @@
   <div class="row">
     <div class="col-6 jobs">
       <div class='job'><p>Produced By</p></div>
-      <div class='job'><p>Additional Guitar By</p></div>
+      <div class='job'><p>Guitar By</p></div>
       <div class='job'><p>Additional Production By</p></div>
-      <div class='job extra-pad'><p>Additional Vocals By</p></div>
-      <div class='job'><p>Mixed By</p></div>
+      <div class='job extra-pad'><p>Mixed By</p></div>
     </div>
     <div class="col-6 people">
-      <div class='name'><p>Finn Orrell</p></div>
+      <div class='name'><p>Romil Hemnani</p></div>
       <div class='name'><p>Jack Loken</p></div>
-      <div class='name'><p style="margin-bottom: 3px;">Natalie Green</p><p>Roy Blair</p></div>
-      <div class='name'><p>Lontalius</p></div>
+      <div class='name'><p style="margin-bottom: 3px;">Roy Blair</p><p>Natalie Green</p></div>
       <div class='name'><p style="margin-bottom: 3px;">Alexander Spit</p><p>Roy Blair</p></div>
     </div>
   </div>
   <div class="row">
-   <p class='songtitle'>"HAPPY"</p>
+   <p class='songtitle'>"FAMILY"</p>
  </div>
  <div class="row">
+  <p class='artist'>(R. Blair)</p>
+</div>
+<div class="row">
+  <div class="col-6 jobs">
+    <div class='job'><p>Produced By</p></div>
+    <div class='job'><p>Additional Guitar By</p></div>
+    <div class='job'><p>Additional Production By</p></div>
+    <div class='job extra-pad'><p>Additional Vocals By</p></div>
+    <div class='job'><p>Mixed By</p></div>
+  </div>
+  <div class="col-6 people">
+    <div class='name'><p>Finn Orrell</p></div>
+    <div class='name'><p>Jack Loken</p></div>
+    <div class='name'><p style="margin-bottom: 3px;">Natalie Green</p><p>Roy Blair</p></div>
+    <div class='name'><p>Lontalius</p></div>
+    <div class='name'><p style="margin-bottom: 3px;">Alexander Spit</p><p>Roy Blair</p></div>
+  </div>
+</div>
+<div class="row">
+ <p class='songtitle'>"HAPPY"</p>
+</div>
+<div class="row">
   <p class='artist'>(R. Blair)</p>
 </div>
 <div class="row">
@@ -346,21 +364,20 @@
 
 </div>
 
-    <div class="fullscreen-bg">
+<div class="fullscreen-bg">
   <video muted autoplay playsinline poster="img/placeholder.png" id="vid1" class="fullscreen-bg__video">
-      <source src="img/websiteloop.webm" type=”video/webm”>
+    <source src="img/websiteloop.webm" type=”video/webm”>
       <source src="img/websiteloop.mp4" type="video/mp4">
-  </video>
+      </video>
     </div>
 
-<iframe width="1" height="1" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/331582155&amp;color=%23ff5500&amp;auto_play=true&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;show_teaser=true&amp;visual=true"></iframe>
-<body>
+    <iframe width="1" height="1" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/331582155&amp;color=%23ff5500&amp;auto_play=true&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;show_teaser=true&amp;visual=true"></iframe>
 
-  <!--Javascript-->
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
-  <!--<script src="js/jquery.iframetracker.js"></script>-->
-  <script src="js/credits.js"></script>
-</body>
-</html>
+    <!--Javascript-->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
+    <!--<script src="js/jquery.iframetracker.js"></script>-->
+    <script src="js/credits.js"></script>
+  </body>
+  </html>
