--- a/shows.html
+++ b/shows.html
@@ -49,7 +49,7 @@
       <div class="col-12 align-self-center" style="margin-top:11%;">
         <div class="row justify-content-center" id="flyers">
           <img src="img/combine-flyer.jpg">
-          <div style="text-align: center;margin-bottom: 70px; margin-top:70px;">
+          <div id="tix" style="text-align: center;">
             <a id="tickets-link" href="https://www.ticketfly.com/event/1631870-kailee-morgue-los-angeles/">BUY TICKETS</a>
           </div>
         </div>
