--- a/credits.html
+++ b/credits.html
@@ -29,7 +29,7 @@
 <body>
 
   <div class="menu-i" id="menu-item-music">
-    <a href="index.html">MUSIC</a>
+    <a href="music.html">MUSIC</a>
   </div> 
   <div class="menu-i" id="menu-item-shows">
     <a href="shows.html">SHOWS</a>
