--- a/shop.html
+++ b/shop.html
@@ -25,21 +25,21 @@
     gtag('config', 'UA-108381604-1');
   </script>
 </head>
-<body>
+<body style="background: #f1edec">
   <div class="menu-i" id="menu-item-roy">
-    <img src="img/rb-black2.png"/>
+    <a href="index.html"><img src="img/catheaven-logo-white.png"/></a>
   </div>
   <div class="menu-i" id="menu-item-music">
-    <a href="index.html">MUSIC</a>
+    <a href="music.html" style="color:#fff">MUSIC</a>
   </div> 
   <div class="menu-i" id="menu-item-shows">
-      <a href="shows.html">SHOWS</a>
+      <a href="shows.html" style="color:#fff">SHOWS</a>
   </div>
   <div class="menu-i" id="menu-item-shop">
-      <a class="active" href="shop.html">SHOP</a>
+      <a class="active" href="shop.html" style="color:#fff;border-bottom: 2px solid #fff;">SHOP</a>
   </div>
   <div class="menu-i" id="menu-item-credits">
-      <a href="credits.html">CREDITS</a>
+      <a href="credits.html" style="color:#fff">CREDITS</a>
   </div>
 
   <div class="container h-100">
