--- a/shows.html
+++ b/shows.html
@@ -29,10 +29,10 @@
 </head>
 <body>
   <div class="menu-i" id="menu-item-roy">
-    <img src="img/rb-black2.png"/>
+    <a href="index.html"><img src="img/catheaven-logo-black.png"/></a>
   </div>
   <div class="menu-i" id="menu-item-music">
-    <a href="index.html">MUSIC</a>
+    <a href="music.html">MUSIC</a>
   </div> 
   <div class="menu-i" id="menu-item-shows">
       <a class="active" href="shows.html">SHOWS</a>
