--- a/index.html
+++ b/index.html
@@ -25,25 +25,32 @@
     gtag('config', 'UA-108381604-1');
   </script>
 </head>
-<body>
+<body style="background:#f1edec;">   <!--url(img/roy-bg.png);background-size: cover;" #e7e7ec-->
   <div class="menu-i" id="menu-item-roy">
-    <img src="img/rb-black2.png"/>
+    <a href="index.html"><img src="img/catheaven-logo-black.png"/></a>
   </div>
   <div class="menu-i" id="menu-item-music">
-    <a class="active" href="index.html">MUSIC</a>
+    <a href="music.html">MUSIC</a>
   </div> 
   <div class="menu-i" id="menu-item-shows">
-      <a href="shows.html">SHOWS</a>
+    <a href="shows.html">SHOWS</a>
   </div>
   <div class="menu-i" id="menu-item-shop">
-      <a href="shop.html">SHOP</a>
+    <a href="shop.html">SHOP</a>
   </div>
   <div class="menu-i" id="menu-item-credits">
-      <a href="credits.html">CREDITS</a>
+    <a href="credits.html">CREDITS</a>
   </div>
 
-  <div class="container h-100">
+  <div class="container h-100" style="">
     <div class="row h-100 justify-content-center" style="">
+      <div class="col-12 align-self-center">
+        <div class="row justify-content-center">
+          <div>
+            <p class="line-1 anim-typewriter">this is a funeral.</p>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 
@@ -53,5 +60,6 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
   <!--<script src="js/jquery.iframetracker.js"></script>-->
   <script src="js/main.js"></script>
+  <script src="js/home.js"></script>
 </body>
 </html>
