--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
     gtag('config', 'UA-108381604-1');
   </script>
 </head>
-<body style="background:#f1edec;">   <!--url(img/roy-bg.png);background-size: cover;" #e7e7ec-->
+<body style="background:url(img/roy-bg3.jpg);background-size: cover;">   <!--url(img/roy-bg.png);background-size: cover;" #e7e7ec-->
   <div class="menu-i" id="menu-item-roy">
-    <a href="index.html"><img src="img/catheaven-logo-black.png"/></a>
+    <a href="index.html"><img src="img/catheaven-logo-white.png"/></a>
   </div>
   <div class="menu-i" id="menu-item-music">
     <a href="music.html">MUSIC</a>
@@ -49,6 +49,11 @@
         <div class="row justify-content-center">
           <div>
             <p class="line-1 anim-typewriter">this is a funeral.</p>
+            <div>
+              
+            </div>
+            <!--apple spotify soundcloud youtube twitter instagram -->
+
           </div>
         </div>
       </div>
