--- a/index.html
+++ b/index.html
@@ -45,14 +45,19 @@
 
   <div class="container h-100" style="">
     <div class="row h-100 justify-content-center" style="">
-      <div class="col-12 align-self-center">
+      <div class="col-12 align-self-center" style="margin-top:6%;">
         <div class="row justify-content-center">
           <div>
             <p class="line-1 anim-typewriter">this is a funeral.</p>
-            <div>
-              
-            </div>
-            <!--apple spotify soundcloud youtube twitter instagram -->
+              <div id="links">
+              <a href="https://itunes.apple.com/us/album/cat-heaven/1316794586?uo=4&at=1001l3Iq&ct=888915493540"><img style="margin-left: 60px;" src="img/apple.png"/></a>
+              <a href="http://open.spotify.com/album/0Z9NeEvqeecaLCFUmI4uDw"><img src="img/spotify.png"/></a>
+              <a href="https://soundcloud.com/royblair"><img src="img/soundcloud-logo.png"/></a>
+              <a href="https://www.youtube.com/channel/UCa7naaG4ADIbHlz6QOz3MDA"><img src="img/youtube-logo.png"/></a>
+              <a href="https://twitter.com/royblair_"><img src="img/twitter-logo-silhouette.png"/></a>
+              <a href="https://www.instagram.com/royblair_/"><img src="img/instagram-logo.png"/></a>
+              <a href="mailto:royblairmgmt@gmail.com"><img style="margin-right: 100px;" src="img/close-envelope.png"/></a>
+          </div>
 
           </div>
         </div>
