--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     gtag('config', 'UA-108381604-1');
   </script>
 </head>
-<body style="background:url(img/roy-bg3.jpg);background-size: cover;">   <!--url(img/roy-bg.png);background-size: cover;" #e7e7ec-->
+<body style="background-size: cover !important;">   <!--url(img/roy-bg.png);background-size: cover;" #e7e7ec-->
   <div class="menu-i" id="menu-item-roy">
     <a href="index.html"><img src="img/catheaven-logo-white.png"/></a>
   </div>
@@ -45,18 +45,18 @@
 
   <div class="container h-100" style="">
     <div class="row h-100 justify-content-center" style="">
-      <div class="col-12 align-self-center" style="margin-top:6%;">
+      <div class="col-12 align-self-center" style="margin-top:3%;">
         <div class="row justify-content-center">
           <div>
             <p class="line-1 anim-typewriter">this is a funeral.</p>
               <div id="links">
-              <a href="https://itunes.apple.com/us/album/cat-heaven/1316794586?uo=4&at=1001l3Iq&ct=888915493540"><img style="margin-left: 60px;" src="img/apple.png"/></a>
+              <a href="https://itunes.apple.com/us/album/cat-heaven/1316794586?uo=4&at=1001l3Iq&ct=888915493540"><img id="first" src="img/apple.png"/></a>
               <a href="http://open.spotify.com/album/0Z9NeEvqeecaLCFUmI4uDw"><img src="img/spotify.png"/></a>
               <a href="https://soundcloud.com/royblair"><img src="img/soundcloud-logo.png"/></a>
               <a href="https://www.youtube.com/channel/UCa7naaG4ADIbHlz6QOz3MDA"><img src="img/youtube-logo.png"/></a>
               <a href="https://twitter.com/royblair_"><img src="img/twitter-logo-silhouette.png"/></a>
               <a href="https://www.instagram.com/royblair_/"><img src="img/instagram-logo.png"/></a>
-              <a href="mailto:royblairmgmt@gmail.com"><img style="margin-right: 100px;" src="img/close-envelope.png"/></a>
+              <a href="mailto:royblairmgmt@gmail.com"><img id="last" src="img/close-envelope.png"/></a>
           </div>
 
           </div>
