--- a/index.html
+++ b/index.html
@@ -12,10 +12,9 @@
   <meta property="og:description" content="Roy Blair's debut album, Cat Heaven, out now."/>
 
   <title>ROY BLAIR</title>
-
+  <link rel="icon" href="logo.ico" type="image/x-icon">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/home.css">
-  <link rel="icon" href="img/logo.ico" type="image/x-icon">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
 
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-108381604-1"></script>
