--- a/shows.html
+++ b/shows.html
@@ -12,11 +12,9 @@
   <meta property="og:description" content="Roy Blair's debut album, Cat Heaven, out now."/>
 
   <title>ROY BLAIR</title>
-
+  <link rel="icon" href="logo.ico" type="image/x-icon">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/shows.css">
-  <link rel="shortcut icon" type="image/x-icon" href="img/logo.ico">
-  <link rel="icon" href="img/logo.ico" type="image/x-icon">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
 
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-108381604-1"></script>
@@ -29,7 +27,7 @@
 </head>
 <body>
   <div class="menu-i" id="menu-item-roy">
-    <a href="index.html"><img src="img/catheaven-logo-black.png"/></a>
+    <a href="index.html"><img src="img/catheaven-logo-white.png"/></a>
   </div>
   <div class="menu-i" id="menu-item-music">
     <a href="music.html">MUSIC</a>
@@ -49,7 +47,7 @@
   <div class="row h-100 justify-content-center" style="">
       <div class="col-12 align-self-center" style="margin-top:11%;">
         <div class="row justify-content-center" id="flyers">
-          <img src="img/combine-flyer.jpg">
+          <img src="img/flyers.jpg">
           <div id="tix" style="text-align: center;">
             <a id="tickets-link" href="https://www.ticketfly.com/event/1631870-kailee-morgue-los-angeles/">BUY TICKETS</a>
           </div>
