--- a/music.html
+++ b/music.html
@@ -13,9 +13,9 @@
 
   <title>ROY BLAIR</title>
 
+  <link rel="icon" href="logo.ico" type="image/x-icon">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/music.css">
-  <link rel="icon" href="img/logo.ico" type="image/x-icon">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
 
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-108381604-1"></script>
@@ -47,9 +47,7 @@
     <div class="row h-100 justify-content-center" style="">
       <div class="col-12 align-self-center">
         <div class="row justify-content-center">
-          <div>
-            <p class="line-1 anim-typewriter">this is a funeral.</p>
-          </div>
+
         </div>
       </div>
     </div>
