--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
 
   <div class="container h-100" style="">
     <div class="row h-100 justify-content-center" style="">
-      <div class="col-12 align-self-center" style="margin-top:3%;">
+      <div class="col-12 align-self-center" style="margin-top:3%;margin-left:1.6%;">
         <div class="row justify-content-center">
           <div>
-            <p class="line-1 anim-typewriter">this is a funeral.</p>
+            <p class="line-1 anim-typewriter" style="margin-left: 3%;">this is a funeral.</p>
               <div id="links">
               <a href="https://itunes.apple.com/us/album/cat-heaven/1316794586?uo=4&at=1001l3Iq&ct=888915493540"><img id="first" src="img/apple.png"/></a>
               <a href="http://open.spotify.com/album/0Z9NeEvqeecaLCFUmI4uDw"><img src="img/spotify.png"/></a>
