--- a/credits.html
+++ b/credits.html
@@ -27,7 +27,9 @@
   </script>
 </head>
 <body>
-
+  <div class="menu-i" id="menu-item-roy" style="z-index: 10000">
+    <a href="index.html"><img src="img/catheaven-logo-white.png"/></a>
+  </div>
   <div class="menu-i" id="menu-item-music">
     <a href="music.html">MUSIC</a>
   </div> 
