--- a/item1.html
+++ b/item1.html
@@ -37,7 +37,7 @@
       <a href="shows.html" style="color:#fff">SHOWS</a>
   </div>
   <div class="menu-i" id="menu-item-shop">
-      <a class="active" href="shop.html" style="color:#fff;border-bottom: 2px solid #fff;">SHOP</a>
+      <a href="shop.html">SHOP</a>
   </div>
   <div class="menu-i" id="menu-item-credits">
       <a href="credits.html" style="color:#fff">CREDITS</a>
