added uncomplete stuff for merch and music

--- a/item1.html
+++ b/item1.html
@@ -44,7 +44,7 @@
   </div>
 
   <div class="container h-100" style="">
-    <div class="row" style="padding-top: 150px;padding-left: 60px;padding-right: 60px;">
+    <div class="row content" style="padding-top: 150px;padding-left: 60px;padding-right: 60px;">
       <div class="col-6">
       </div>
       <div class="col-6">
