--- a/music.html
+++ b/music.html
@@ -12,12 +12,12 @@
   <meta property="og:description" content="Roy Blair's debut album, Cat Heaven, out now."/>
 
   <title>ROY BLAIR</title>
-
+  <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet">
   <link rel="icon" href="logo.ico" type="image/x-icon">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/music.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
-
+  <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-108381604-1"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
@@ -34,20 +34,31 @@
     <a class="active" href="music.html" style="color:#fff;border-bottom: 2px solid #fff;">MUSIC</a>
   </div> 
   <div class="menu-i" id="menu-item-shows">
-      <a href="shows.html" style="color:#fff">SHOWS</a>
+    <a href="shows.html" style="color:#fff">SHOWS</a>
   </div>
   <div class="menu-i" id="menu-item-shop">
-      <a href="shop.html" style="color:#fff;">SHOP</a>
+    <a href="shop.html" style="color:#fff;">SHOP</a>
   </div>
   <div class="menu-i" id="menu-item-credits">
-      <a href="credits.html" style="color:#fff">CREDITS</a>
+    <a href="credits.html" style="color:#fff">CREDITS</a>
   </div>
 
-  <div class="container h-100" style="">
-    <div class="row h-100 justify-content-center" style="">
+  <div class="container h-100">
+    <div class="row h-100 justify-content-center">
       <div class="col-12 align-self-center">
         <div class="row justify-content-center">
+          <div class="col-4" id="music-right">
+            <a href=""><p class="music-item"><i class="fas fa-play"></i>CAT HEAVEN<span>DEC 2017</span></p></a>
+            <a href=""><p class="music-item"><i class="fas fa-play"></i>VANS<span>OCT 2017</span></p></a>
+            <a href=""><p class="music-item"><i class="fas fa-play"></i>SHELL<span>JUL 2017</span></p></a>
 
+          </div>
+          <div class="col-2"></div>
+          <div class="col-4" id="music-left">
+            <a href=""><p class="music-item"><i class="fas fa-play"></i>UK<span>JAN 2017</span></p></a>
+            <a href=""><p class="music-item"><i class="fas fa-play"></i>SUCKER [DEMO]<span>JUL 2016</span></p></a>
+            <a href=""><p class="music-item"><i class="fas fa-play"></i>SUNSETS<span>SEP 2015</span></p></a>
+          </div>
         </div>
       </div>
     </div>
