--- a/shop.html
+++ b/shop.html
@@ -47,13 +47,13 @@
     <div class="row h-100 justify-content-center">
       <div class="col-12 align-self-center">
         <div class="row justify-content-center">
-          <div class="col-4">
+          <div class="col-lg-4">
             <a href="item1.html"><img class="shop-item" src="img/temp-item.png"/></a>
           </div>
-          <div class="col-4">
+          <div class="col-md-4">
             <a href="item1.html"><img class="shop-item" src="img/temp-item.png"/></a>
           </div>
-          <div class="col-4">
+          <div class="col-md-4">
             <a href="item1.html"><img class="shop-item" src="img/temp-item.png"/></a>
           </div>
         </div>
