--- a/music/vans.html
+++ b/music/vans.html
@@ -12,12 +12,13 @@
   <meta property="og:description" content="Roy Blair's debut album, Cat Heaven, out now."/>
 
   <title>ROY BLAIR</title>
-  <link rel="icon" href="logo.ico" type="image/x-icon">
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/home.css">
-  <link rel="stylesheet" href="css/hover.css">
+  <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet">
+  <link rel="icon" href="../logo.ico" type="image/x-icon">
+  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="../css/music.css">
+  <link rel="stylesheet" href="../css/hover.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
-
+  <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-108381604-1"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
@@ -26,43 +27,29 @@
     gtag('config', 'UA-108381604-1');
   </script>
 </head>
-<body style="background-size: cover !important;">   <!--url(img/roy-bg.png);background-size: cover;" #e7e7ec-->
+<body style="background:#ffcbab;">   <!--url(img/roy-bg.png);background-size: cover;" #e7e7ec.  ffc7d0 ffcfd7 -->
   <div class="menu-i" id="menu-item-roy">
-    <a href="index.html"><img src="img/catheaven-logo-white.png"/></a>
+    <a href="../index.html"><img src="../img/catheaven-logo-white.png"/></a>
   </div>
   <div class="menu-i" id="menu-item-music">
-    <a class="button hvr-grow" href="music.html">MUSIC</a>
+    <a class="button hvr-grow" href="../music.html">MUSIC</a>
   </div> 
   <div class="menu-i" id="menu-item-shows">
-    <a  class="button hvr-grow" href="shows.html">SHOWS</a>
+    <a  class="button hvr-grow" href="../shows.html">SHOWS</a>
   </div>
   <div class="menu-i" id="menu-item-shop">
-    <a class="button hvr-grow" href="shop.html">SHOP</a>
+    <a class="button hvr-grow" href="../shop.html">SHOP</a>
   </div>
   <div class="menu-i" id="menu-item-credits">
-    <a class="button hvr-grow" href="credits.html">CREDITS</a>
+    <a class="button hvr-grow" href="../credits.html">CREDITS</a>
   </div>
 
-  <div class="container h-100" style="">
-    <div class="row h-100 justify-content-center" style="">
-      <div class="col-12 align-self-center" style="margin-top:3%;">
+  <div class="container h-100">
+    <div class="row h-100 justify-content-center">
+      <div class="col-12 align-self-center" style="margin-top: 2%;">
         <div class="row justify-content-center">
- 
-            <!--<p class="line-1 anim-typewriter">this is a funeral.</p>-->
-            <p id="typedtext">&nbsp</p>
-         
+<iframe width="400px" height="400px" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/347685572&amp;color=%23ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;show_teaser=true&amp;visual=true"></iframe>
         </div>
-          <div class="row justify-content-center">
-            <div id="links">
-              <a class="button hvr-grow" href="https://itunes.apple.com/us/album/cat-heaven/1316794586?uo=4&at=1001l3Iq&ct=888915493540"><img id="first" src="img/apple.png"/></a>
-              <a class="button hvr-grow" href="http://open.spotify.com/album/0Z9NeEvqeecaLCFUmI4uDw"><img src="img/spotify.png"/></a>
-              <a class="button hvr-grow" href="https://soundcloud.com/royblair"><img src="img/soundcloud-logo.png"/></a>
-              <a class="button hvr-grow" href="https://www.youtube.com/channel/UCa7naaG4ADIbHlz6QOz3MDA"><img src="img/youtube-logo.png"/></a>
-              <a class="button hvr-grow" href="https://twitter.com/royblair_"><img src="img/twitter-logo-silhouette.png"/></a>
-              <a class="button hvr-grow" href="https://www.instagram.com/royblair_/"><img src="img/instagram-logo.png"/></a>
-              <a class="button hvr-grow" href="mailto:royblairmgmt@gmail.com"><img id="last" src="img/close-envelope.png"/></a>
-          </div>
-          </div>
       </div>
     </div>
   </div>
@@ -72,7 +59,6 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
   <!--<script src="js/jquery.iframetracker.js"></script>-->
-  <script src="js/main.js"></script>
-  <script src="js/home.js"></script>
+  <script src="../js/main.js"></script>
 </body>
 </html>
