--- a/shop.html
+++ b/shop.html
@@ -16,6 +16,7 @@
   <link rel="icon" href="logo.ico" type="image/x-icon">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/shop.css">
+  <link rel="stylesheet" href="css/hover.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
 
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-108381604-1"></script>
@@ -31,16 +32,16 @@
     <a href="index.html"><img src="img/catheaven-logo-white.png"/></a>
   </div>
   <div class="menu-i" id="menu-item-music">
-    <a href="music.html" style="color:#fff">MUSIC</a>
+    <a class="button hvr-grow" href="music.html">MUSIC</a>
   </div> 
   <div class="menu-i" id="menu-item-shows">
-      <a href="shows.html" style="color:#fff">SHOWS</a>
+    <a  class="button hvr-grow" href="shows.html">SHOWS</a>
   </div>
   <div class="menu-i" id="menu-item-shop">
-      <a class="active" href="shop.html" style="color:#fff;border-bottom: 2px solid #fff;">SHOP</a>
+    <a class="button hvr-grow active" href="shop.html">SHOP</a>
   </div>
   <div class="menu-i" id="menu-item-credits">
-      <a href="credits.html" style="color:#fff">CREDITS</a>
+    <a class="button hvr-grow" href="credits.html">CREDITS</a>
   </div>
 
   <div class="container h-100">
