--- a/shows.html
+++ b/shows.html
@@ -15,6 +15,7 @@
   <link rel="icon" href="logo.ico" type="image/x-icon">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/shows.css">
+  <link rel="stylesheet" href="css/hover.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
 
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-108381604-1"></script>
@@ -30,16 +31,16 @@
     <a href="index.html"><img src="img/catheaven-logo-white.png"/></a>
   </div>
   <div class="menu-i" id="menu-item-music">
-    <a href="music.html">MUSIC</a>
+    <a class="button hvr-grow active" href="music.html">MUSIC</a>
   </div> 
   <div class="menu-i" id="menu-item-shows">
-      <a class="active" href="shows.html">SHOWS</a>
+    <a  class="button hvr-grow active" href="shows.html">SHOWS</a>
   </div>
   <div class="menu-i" id="menu-item-shop">
-      <a href="shop.html">SHOP</a>
+    <a class="button hvr-grow" href="shop.html">SHOP</a>
   </div>
   <div class="menu-i" id="menu-item-credits">
-      <a href="credits.html">CREDITS</a>
+    <a class="button hvr-grow" href="credits.html">CREDITS</a>
   </div>
 
 
