--- a/shows.html
+++ b/shows.html
@@ -31,7 +31,7 @@
     <a href="index.html"><img src="img/catheaven-logo-white.png"/></a>
   </div>
   <div class="menu-i" id="menu-item-music">
-    <a class="button hvr-grow active" href="music.html">MUSIC</a>
+    <a class="button hvr-grow" href="music.html">MUSIC</a>
   </div> 
   <div class="menu-i" id="menu-item-shows">
     <a  class="button hvr-grow active" href="shows.html">SHOWS</a>
