scroll on homepage good

--- a/shows.html
+++ b/shows.html
@@ -50,7 +50,7 @@
         <div class="row justify-content-center" id="flyers">
           <img src="img/flyers.jpg">
         </div>
-        <div class="row justify-content-center" style="margin-top: 70px;">
+        <div class="row justify-content-center" id="tix">
             <a id="tickets-link" href="https://www.ticketfly.com/event/1631870-kailee-morgue-los-angeles/">BUY TICKETS</a>
         </div>
     </div>   
