music tab mobile friendly

--- a/music/catheaven.html
+++ b/music/catheaven.html
@@ -48,7 +48,7 @@
     <div class="row h-100 justify-content-center">
       <div class="col-12 align-self-center" style="margin-top:3%;">
         <div class="row justify-content-center">
-          <img src="../img/ch-cover.jpg" style="width: 350px;height: 350px;" />
+          <img id="cat-heaven-cover" src="../img/ch-cover.jpg" />
         </div>
         <div class="row justify-content-center">
          <div id="links">
