--- a/music.html
+++ b/music.html
@@ -53,7 +53,7 @@
             <a href="music/vans.html"><p class="music-item"><i class="fas fa-play"></i>VANS<span>OCT 2017</span></p></a>
             <a href="music/shell.html"><p class="music-item"><i class="fas fa-play"></i>SHELL<span>JUL 2017</span></p></a>
           </div>
-          <div class="col-2"></div>
+          <div class="col-2" id="music-divider"></div>
           <div class="col-4" id="music-left">
             <a href="music/uk.html"><p class="music-item"><i class="fas fa-play"></i>UK<span>JAN 2017</span></p></a>
             <a href="music/sucker.html"><p class="music-item"><i class="fas fa-play"></i>SUCKER [DEMO]<span>JUL 2016</span></p></a>
@@ -70,5 +70,6 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
   <!--<script src="js/jquery.iframetracker.js"></script>-->
   <script src="js/main.js"></script>
+  <script src="js/music.js"></script>
 </body>
 </html>
