mobile friendly boy

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <div data-menuanchor="tumblr"><a href="#tumblr"><img src="img/arrow-down.png"/></a></div>
       </div>
     </div>
-    <div class="section" data-anchor="tumblr" style="height: 100%; width:100%;background:#f9f6f6;border-top:2px solid #fff">
+    <div class="section" data-anchor="tumblr" style="height: 100%; width:100%;background:#f9f6f6;">
       <div class="container h-100" id="tumblrPage">
         <div class="row h-100 justify-content-center">
           <div class="col-12 align-self-center">
