--- a/shop.html
+++ b/shop.html
@@ -46,53 +46,27 @@
 
   <div class="container h-100">
     <div class="row h-100 justify-content-center">
-      <div class="col-12 align-self-center">
+      <div class="col-12 align-self-center" id="shop-main">
         <div class="row justify-content-center">
           <div class="col-lg-4">
             <a href="item1.html"><img class="shop-item" src="img/temp-item.png"/></a>
           </div>
-          <div class="col-md-4">
+          <div class="col-lg-4">
             <a href="item1.html"><img class="shop-item" src="img/temp-item.png"/></a>
           </div>
-          <div class="col-md-4">
-            <a href="item1.html"><img class="shop-item" src="img/temp-item.png"/></a>
+          <div class="col-lg-4">
+            <a href="item1.html"><img style="padding-bottom: 90px" class="shop-item" src="img/temp-item.png"/></a>
           </div>
         </div>
       </div>
     </div>
   </div>
-<!--
-  <div class="container h-100" style="">
-    <div class="row" style="padding-top: 150px;padding-left: 60px;padding-right: 60px;">
-      <div class="col-4">
-        <a href="item1.html"><img class="shop-item" src="img/temp-item.png"/></a>
-      </div>
-      <div class="col-4">
-        <a href="item1.html"><img class="shop-item" src="img/temp-item.png"/></a>
-      </div>
-      <div class="col-4">
-        <a href="item1.html"><img class="shop-item" src="img/temp-item.png"/></a>
-      </div>
-    </div>
-        <div class="row" style="padding-top: 90px;padding-left: 60px;padding-right: 60px;padding-bottom:60px;">
-      <div class="col-4">
-        <a href=""><img class="shop-item" src="img/temp-item.png"/></a>
-      </div>
-      <div class="col-4">
-        <a href=""><img class="shop-item" src="img/temp-item.png"/></a>
-      </div>
-      <div class="col-4">
-        <a href=""><img class="shop-item" src="img/temp-item.png"/></a>
-      </div>
-    </div>
-  </div>
--->
-
   <!--Javascript-->
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
   <!--<script src="js/jquery.iframetracker.js"></script>-->
   <script src="js/main.js"></script>
+  <script src="js/shop.js"></script>
 </body>
 </html>
