--- a/shows.html
+++ b/shows.html
@@ -62,5 +62,6 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
   <!--<script src="js/jquery.iframetracker.js"></script>-->
   <script src="js/main.js"></script>
+  <script src="js/shows.js"></script>
 </body>
 </html>
