fixed shop mobile stuff

--- a/shop.html
+++ b/shop.html
@@ -55,7 +55,7 @@
             <a href="item1.html"><img class="shop-item" src="img/temp-item.png"/></a>
           </div>
           <div class="col-lg-4">
-            <a href="item1.html"><img style="padding-bottom: 90px" class="shop-item" src="img/temp-item.png"/></a>
+            <a href="item1.html"><img class="shop-item last-item" src="img/temp-item.png"/></a>
           </div>
         </div>
       </div>
