--- a/shows.html
+++ b/shows.html
@@ -51,7 +51,7 @@
           <img src="img/flyers.jpg">
         </div>
         <div class="row justify-content-center" id="tix">
-            <a id="tickets-link" href="https://www.ticketfly.com/event/1631870-kailee-morgue-los-angeles/">BUY TICKETS</a>
+            <a id="tickets-link" href="https://www.ticketfly.com/event/1631870-kailee-morgue-los-angeles/">buy tickets</a>
         </div>
     </div>   
   </div>
