--- a/shows.html
+++ b/shows.html
@@ -36,8 +36,8 @@
   <div class="menu-i" id="menu-item-shows">
     <a  class="button hvr-grow active" href="shows.html">SHOWS</a>
   </div>
-  <div class="menu-i" id="menu-item-shop">
-    <a class="button hvr-grow" href="shop.html">SHOP</a>
+  <div class="menu-i" id="menu-item-lookbook">
+    <a class="button hvr-grow" href="lookbook.html">LOOKBOOK</a>
   </div>
   <div class="menu-i" id="menu-item-credits">
     <a class="button hvr-grow" href="credits.html">CREDITS</a>
