fixed img links

--- a/lookbook.html
+++ b/lookbook.html
@@ -53,8 +53,8 @@
           <div class="row justify-content-center">
             <div id="lookbook-imgs" class="slider">
               <!--<div><img src="img/lookbook/tesla.png"/></div>-->
-              <div><img src="img/lookbook/1.png"/></div>
-              <div><img src="img/lookbook/2.png"/></div>
+              <div><img src="img/lookbook/1.PNG"/></div>
+              <div><img src="img/lookbook/2.PNG"/></div>
               <div><img src="img/lookbook/3.png"/></div>
             </div>
             <!--
