added bgs and made minor changes

--- a/lookbook.html
+++ b/lookbook.html
@@ -29,7 +29,7 @@
     gtag('config', 'UA-108381604-1');
   </script>
 </head>
-<body style="background: #ada2aa">    <!--#f1edec pretty grey-->
+<body style="background: url(img/backgrounds/blackmamba.jpg);">    <!--#f1edec pretty grey-->
   <div class="menu-i" id="menu-item-roy">
     <a href="index.html"><img src="img/catheaven-logo-white.png"/></a>
   </div>
