--- a/credits.html
+++ b/credits.html
@@ -56,7 +56,7 @@
       </div>
     </div>
 -->
-    <div class="row h-100 justify-content-center catico" style="margin: 0;z-index:100;"> 
+    <div class="row h-100 justify-content-center catico" style="margin: 0;z-index:100;margin-left:-28px !important;"> 
       <div class="align-self-center" style="z-index:100;">    
         <img id="cath" src="img/catheaven.png" style="z-index:100;"/></a>
       </div>
