--- a/music.html
+++ b/music.html
@@ -27,7 +27,7 @@
     gtag('config', 'UA-108381604-1');
   </script>
 </head>
-<body style="background:#ffcbab;">   <!--url(img/roy-bg.png);background-size: cover;" #e7e7ec.  ffc7d0 ffcfd7 -->
+<body>   <!--url(img/roy-bg.png);background-size: cover;" #e7e7ec.  ffc7d0 ffcfd7 -->
   <div class="menu-i" id="menu-item-roy">
     <a href="index.html"><img src="img/catheaven-logo-white.png"/></a>
   </div>
