--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <meta name="description" content="Roy Blair's debut album, Cat Heaven, out now.">
   <meta name="keywords" content="roy blair,cat heaven,perfume">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
   <meta property="og:url" content="http://royblair.com/" />
   <meta property="og:title" content="ROY BLAIR" />
   <meta property="og:description" content="Roy Blair's debut album, Cat Heaven, out now."/>
@@ -26,21 +25,25 @@
     gtag('config', 'UA-108381604-1');
   </script>
 </head>
-<body style="background-size: cover !important;">   <!--url(img/roy-bg.png);background-size: cover;" #e7e7ec-->
+<body>   <!--url(img/roy-bg.png);background-size: cover;" #e7e7ec-->
   <div class="menu-i" id="menu-item-roy">
     <a href="index.html"><img src="img/catheaven-logo-white.png"/></a>
   </div>
-  <div class="menu-i" id="menu-item-music">
-    <a class="button hvr-grow" href="music.html">MUSIC</a>
+  <div class="menu-i w-img" id="menu-item-music">
+    <a class="button hvr-grow" href="music.html"><img src="img/music.png"/>
+    </a>
   </div> 
-  <div class="menu-i" id="menu-item-shows">
-    <a  class="button hvr-grow" href="shows.html">SHOWS</a>
+  <div class="menu-i w-img" id="menu-item-shows">
+    <a  class="button hvr-grow" href="shows.html"><img src="img/shows.png"/>
+      </a>
   </div>
-  <div class="menu-i" id="menu-item-lookbook">
-    <a class="button hvr-grow" href="lookbook.html">LOOKBOOK</a>
+  <div class="menu-i w-img" id="menu-item-lookbook">
+    <a class="button hvr-grow" href="lookbook.html"><img style="height:29px" src="img/lookbook.png"/>
+    </a>
   </div>
-  <div class="menu-i" id="menu-item-credits">
-    <a class="button hvr-grow" href="credits.html">CREDITS</a>
+  <div class="menu-i w-img" id="menu-item-credits">
+    <a class="button hvr-grow" href="credits.html"><img style="height:23px" src="img/credits.png"/>
+    </a>
   </div>
 
   <div id="fullpage">
