--- a/music/sucker.html
+++ b/music/sucker.html
@@ -31,17 +31,21 @@
   <div class="menu-i" id="menu-item-roy">
     <a href="../index.html"><img src="../img/catheaven-logo-white.png"/></a>
   </div>
-  <div class="menu-i" id="menu-item-music">
-    <a class="button hvr-grow" href="../music.html">MUSIC</a>
+  <div class="menu-i w-img" id="menu-item-music">
+    <a class="button hvr-grow" href="../music.html"><img src="../img/music.png"/>
+    </a>
   </div> 
-  <div class="menu-i" id="menu-item-shows">
-    <a  class="button hvr-grow" href="../shows.html">SHOWS</a>
+  <div class="menu-i w-img" id="menu-item-shows">
+    <a  class="button hvr-grow" href="../shows.html"><img src="../img/shows.png"/>
+      </a>
   </div>
-  <div class="menu-i" id="menu-item-lookbook">
-    <a class="button hvr-grow" href="../lookbook.html">LOOKBOOK</a>
+  <div class="menu-i w-img" id="menu-item-lookbook">
+    <a class="button hvr-grow" href="../lookbook.html"><img style="height:29px" src="../img/lookbook.png"/>
+    </a>
   </div>
-  <div class="menu-i" id="menu-item-credits">
-    <a class="button hvr-grow" href="../credits.html">CREDITS</a>
+  <div class="menu-i w-img" id="menu-item-credits">
+    <a class="button hvr-grow" href="../credits.html"><img style="height:23px" src="../img/credits.png"/>
+    </a>
   </div>
 
   <div class="container h-100">
