--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
       </a>
   </div>
   <div class="menu-i w-img" id="menu-item-lookbook">
-    <a class="button hvr-grow" href="lookbook.html"><img style="height:29px" src="img/lookbook.png"/>
+    <a class="button hvr-grow" href="lookbook.html"><img src="img/lookbook.png"/>
     </a>
   </div>
   <div class="menu-i w-img" id="menu-item-credits">
-    <a class="button hvr-grow" href="credits.html"><img style="height:23px" src="img/credits.png"/>
+    <a class="button hvr-grow" href="credits.html"><img src="img/credits.png"/>
     </a>
   </div>
 
