--- a/music.html
+++ b/music.html
@@ -33,7 +33,7 @@
   </div>
   <div class="menu-i w-img" id="menu-item-music">
     <a class="button hvr-grow" href="music.html"><img src="img/music.png"/>
-      <br/><img style="width:80px;height: auto;margin-top: -14px;" src="img/underline.png" />
+      <br/><img id="music-underline" src="img/underline.png" />
     </a>
   </div> 
   <div class="menu-i w-img" id="menu-item-shows">
@@ -41,11 +41,11 @@
       </a>
   </div>
   <div class="menu-i w-img" id="menu-item-lookbook">
-    <a class="button hvr-grow" href="lookbook.html"><img style="height:29px" src="img/lookbook.png"/>
+    <a class="button hvr-grow" href="lookbook.html"><img src="img/lookbook.png"/>
     </a>
   </div>
   <div class="menu-i w-img" id="menu-item-credits">
-    <a class="button hvr-grow" href="credits.html"><img style="height:23px" src="img/credits.png"/>
+    <a class="button hvr-grow" href="credits.html"><img src="img/credits.png"/>
     </a>
   </div>
 
