--- a/shows.html
+++ b/shows.html
@@ -36,15 +36,15 @@
   </div> 
   <div class="menu-i w-img" id="menu-item-shows">
     <a  class="button hvr-grow" href="shows.html"><img src="img/shows.png"/>
-      <br/><img style="width:86px;height: 8.5px;margin-top: -14px;" src="img/underline.png" />
+      <br/><img id="shows-underline" src="img/underline.png" />
       </a>
   </div>
   <div class="menu-i w-img" id="menu-item-lookbook">
-    <a class="button hvr-grow" href="lookbook.html"><img style="height:29px" src="img/lookbook.png"/>
+    <a class="button hvr-grow" href="lookbook.html"><img src="img/lookbook.png"/>
     </a>
   </div>
   <div class="menu-i w-img" id="menu-item-credits">
-    <a class="button hvr-grow" href="credits.html"><img style="height:23px" src="img/credits.png"/>
+    <a class="button hvr-grow" href="credits.html"><img src="img/credits.png"/>
     </a>
   </div>
 
