--- a/lookbook.html
+++ b/lookbook.html
@@ -42,12 +42,12 @@
       </a>
   </div>
   <div class="menu-i w-img" id="menu-item-lookbook">
-    <a class="button hvr-grow" href="lookbook.html"><img style="height:29px" src="img/lookbook.png"/>
-      <br/><img style="width:134px;height:8.5px;margin-top: 2px;position: absolute;" src="img/underline.png" />
+    <a class="button hvr-grow" href="lookbook.html"><img src="img/lookbook.png"/>
+      <br/><img id="lookbook-underline" src="img/underline.png" />
     </a>
   </div>
   <div class="menu-i w-img" id="menu-item-credits">
-    <a class="button hvr-grow" href="credits.html"><img style="height:23px" src="img/credits.png"/>
+    <a class="button hvr-grow" href="credits.html"><img src="img/credits.png"/>
     </a>
   </div>
 
