--- a/music/catheaven.html
+++ b/music/catheaven.html
@@ -16,7 +16,6 @@
   <link rel="icon" href="../logo.ico" type="image/x-icon">
   <link rel="stylesheet" href="../css/style.css">
   <link rel="stylesheet" href="../css/music.css">
-  <link rel="stylesheet" href="../css/hover.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
   <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-108381604-1"></script>
@@ -28,7 +27,9 @@
   </script>
 </head>
 <body>   <!--url(img/roy-bg.png);background-size: cover;" #e7e7ec.  ffc7d0 ffcfd7 -->
-
+  <div class="menu-i" id="menu-item-roy">
+    <a href="/"><img src="../img/cat-heaven-blue2.png"/></a>
+  </div>
   <div class="container h-100">
     <div class="row h-100 justify-content-center">
       <div class="col-12 align-self-center" style="margin-top:3%;">
