--- a/music/index.html
+++ b/music/index.html
@@ -27,7 +27,10 @@
     gtag('config', 'UA-108381604-1');
   </script>
 </head>
-<body> 
+<body>
+  <div class="menu-i" id="menu-item-roy">
+    <a href="/"><img src="../img/cat-heaven-blue2.png"/></a>
+  </div>
 
   <div class="container h-100">
     <div class="row h-100 justify-content-center">
