--- a/music/sucker.html
+++ b/music/sucker.html
@@ -28,7 +28,9 @@
   </script>
 </head>
 <body>   <!--url(img/roy-bg.png);background-size: cover;" #e7e7ec.  ffc7d0 ffcfd7 -->
-
+  <div class="menu-i" id="menu-item-roy">
+    <a href="/"><img src="../img/cat-heaven-blue2.png"/></a>
+  </div>
   <div class="container h-100">
     <div class="row h-100 justify-content-center">
       <div class="col-12 align-self-center" style="margin-top: 2%;">
