--- a/shows/index.html
+++ b/shows/index.html
@@ -28,6 +28,10 @@
 </head>
 <body>
 
+<div class="menu-i" id="menu-item-roy">
+  <a href="/"><img src="../img/cat-heaven-blue2.png"/></a>
+</div>
+
 <div class="container h-100" style="">
   <div class="row h-100 justify-content-center" style="">
       <div class="col-12 align-self-center" id="fly-wrapper">
