changed color to black:

--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
         </div>
         <div class="row justify-content-center">
           <div id="links">
-            <a class="button hvr-grow" href="https://itunes.apple.com/us/album/cat-heaven/1316794586?uo=4&at=1001l3Iq&ct=888915493540"><img id="first" src="img/apple.png"/></a>
-            <a class="button hvr-grow" href="http://open.spotify.com/album/0Z9NeEvqeecaLCFUmI4uDw"><img src="img/spotify.png"/></a>
-            <a class="button hvr-grow" href="https://soundcloud.com/royblair"><img src="img/soundcloud-logo.png"/></a>
-            <a class="button hvr-grow" href="https://www.youtube.com/channel/UCa7naaG4ADIbHlz6QOz3MDA"><img src="img/youtube-logo.png"/></a>
-            <a class="button hvr-grow" href="https://twitter.com/royblair_"><img src="img/twitter-logo-silhouette.png"/></a>
-            <a class="button hvr-grow" href="https://www.instagram.com/royblair_/"><img src="img/instagram-logo.png"/></a>
-            <a class="button hvr-grow" href="mailto:royblairmgmt@gmail.com"><img id="last" src="img/close-envelope.png"/></a>
+            <a class="button hvr-grow" href="https://itunes.apple.com/us/album/cat-heaven/1316794586?uo=4&at=1001l3Iq&ct=888915493540"><img id="first" src="img/apple-black.png"/></a>
+            <a class="button hvr-grow" href="http://open.spotify.com/album/0Z9NeEvqeecaLCFUmI4uDw"><img src="img/spotify-black.png"/></a>
+            <a class="button hvr-grow" href="https://soundcloud.com/royblair"><img src="img/soundcloud-logo-black.png"/></a>
+            <a class="button hvr-grow" href="https://www.youtube.com/channel/UCa7naaG4ADIbHlz6QOz3MDA"><img src="img/youtube-logo-black.png"/></a>
+            <a class="button hvr-grow" href="https://twitter.com/royblair_"><img src="img/twitter-logo-silhouette-black.png"/></a>
+            <a class="button hvr-grow" href="https://www.instagram.com/royblair_/"><img src="img/instagram-logo-black.png"/></a>
+            <a class="button hvr-grow" href="mailto:royblairmgmt@gmail.com"><img id="last" src="img/close-envelope-black.png"/></a>
           </div>
         </div>
       </div>
