--- a/shop/index.html
+++ b/shop/index.html
@@ -28,14 +28,22 @@
   </script>
 </head>
 <body style="background: url(../img/backgrounds/blackmamba.jpg);">    <!--#f1edec pretty grey-->
-  <div class="menu-i" id="menu-item-roy">
-    <a href="/"><img src="../img/cat-heaven-blue2.png"/></a>
+<div class="menu-i" style="position: relative;" id="menu-item-roy">
+    <a href="/"><img src="../img/cat-heaven-blue2.png" style="display: block; margin:0 auto;"/></a>
   </div>
     <div class="container h-100" style="margin-left: 0px;margin-right: 0px;max-width: 100%;">
-      <div class="row h-100 justify-content-center">
+      <div class="row h-100 justify-content-center" id="fullpage" style="margin-top:-156.39px;">
         <div class="col-12 align-self-center" id="shop-main">
           <div class="row justify-content-center">
-
+            <div class="col-md-4">
+              <a href="/shop/swearshirt.html" ><img class="lookbook-preview" id="hoodie" src="../img/hoodie-preview.png"/></a>
+            </div>
+            <div class="col-md-4">
+              <a href="/shop/longsleeve.html" ><img class="lookbook-preview" src="../img/longsleeve-preview.png"/></a>
+            </div>
+            <div class="col-md-4">
+              <a href="/shop/shirt.html" ><img class="lookbook-preview" src="../img/shirt-preview.png"/></a>
+            </div>
           </div>
         </div>
       </div>
