--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="row justify-content-center"> 
           <div class="col-5">
            <ul>
-            <a id="shop-tab" href="/"><li>shop</li></a>
+            <a id="shop-tab" href="/shop"><li>shop</li></a>
             <a id="shows-tab" href="/shows"><li>shows</li></a>
             <a id="music-tab" href="/music"><li>music</li></a>
             <a id="credits-tab" href="/credits"><li>credits</li></a>
